# taxi

./: README.md  tox.ini
src/apb/rtl/: taxi_apb_adapter.sv  taxi_apb_axil_adapter.sv  taxi_apb_dp_ram.sv  taxi_apb_interconnect.f  taxi_apb_interconnect.sv
src/axi/rtl/: taxi_axi_adapter_rd.sv  taxi_axi_adapter_wr.sv  taxi_axi_axil_adapter_rd.sv  taxi_axi_axil_adapter_wr.sv  taxi_axi_crossbar_addr.sv  taxi_axi_dp_ram.f  taxi_axi_dp_ram.sv  taxi_axi_fifo_rd.sv  taxi_axi_fifo_wr.sv  taxi_axi_ram.sv  taxi_axi_ram_if_rd.sv  taxi_axi_ram_if_rdwr.f  taxi_axi_ram_if_rdwr.sv  taxi_axi_ram_if_wr.sv  taxi_axi_tie.f  taxi_axi_tie.sv  taxi_axi_tie_rd.sv  taxi_axi_tie_wr.sv  taxi_axil_adapter_rd.sv  taxi_axil_adapter_wr.sv  taxi_axil_apb_adapter.sv  taxi_axil_dp_ram.sv  taxi_axil_interconnect.sv  taxi_axil_interconnect_1s.f  taxi_axil_interconnect_1s.sv  taxi_axil_interconnect_1s_rd.f  taxi_axil_interconnect_1s_rd.sv  taxi_axil_interconnect_1s_wr.f  taxi_axil_interconnect_1s_wr.sv  taxi_axil_interconnect_rd.sv  taxi_axil_interconnect_wr.sv  taxi_axil_tie.f  taxi_axil_tie.sv  taxi_axil_tie_rd.sv  taxi_axil_tie_wr.sv
src/axis/rtl/: taxi_axis_cobs_decode.sv  taxi_axis_cobs_encode.sv
src/cndm/dpdk/: README.md
src/cndm/dpdk/cndm/: cndm.h  cndm_cmd.c  cndm_cq.c  cndm_ethdev.c  cndm_hw.h  cndm_main.c  cndm_rq.c  cndm_sq.c  meson.build
src/cndm/rtl/: cndm_brd_ctrl_i2c.f  cndm_brd_ctrl_i2c.sv  cndm_lite_core.f  cndm_lite_core.sv  cndm_lite_pcie_us.f  cndm_lite_pcie_us.sv  cndm_micro_core.f  cndm_micro_core.sv  cndm_micro_cpl_wr.sv  cndm_micro_desc_rd.sv  cndm_micro_dp_mgr.sv  (+6 more)
(+416 files in other folders)
